--- a/1-4-next/style/main.css
+++ b/1-4-next/style/main.css
@@ -42,17 +42,30 @@ header nav > ul > li > .sub li a:hover {color:#ddd;}
 /*section*/
 section {}
 section .sec1 {background-image:url(../images/main_bg_01.jpg)}
-section .sec2 {background-image:url(../images/main_bg_02_3.jpg)}
+section .sec2 {
+    /* background-image:url(../images/main_bg_02_3.jpg) */
+}
 section .sec3 {background-image:url(../images/main_bg_03.jpg)}
+/* section .sec{background-attachment: fixed} */
 section > div {
     background-size:cover; background-position:center;
+    background-attachment: fixed;
     text-align:center; height:100vh; width:100%; 
     display:flex; flex-flow:column wrap; justify-content:center; color:#fff;
+    /* 사이즈가 모두 커버고 포지션은 가운대. */
 }
 section > div:nth-child(2) {
-    background-repeat:no-repeat;
-    background-size:cover, cover;
-    background-position:40% center, center;
+    background: 
+    url(../images/main_bg_02_2.png),
+    url(../images/main_bg_02_4.png),
+    url(../images/main_bg_02_3.jpg);
+    background-size: 
+    auto,
+    auto,
+    cover;
+    background-repeat: no-repeat;
+    background-position:center;
+    background-attachment: scroll, scroll, fixed;
 }
 section > div h1 {
     font-family: 'Pattaya', sans-serif;
