--- a/3-1-private/styles/desktop.css
+++ b/3-1-private/styles/desktop.css
@@ -44,10 +44,12 @@ main .bg_wrap .bg1 {
 main .bg_wrap .bg2 {
     height:200px; 
     background:url(../images/bg_city1.png) repeat-x;
+    animation: right 30s linear infinite;
 }
 main .bg_wrap .bg3 {
     height:100px; position:relative; top:-96px;
     background:url(../images/bg_city2.png) repeat-x;
+    animation: right 10s linear infinite;
 }
 /* 메인제목 */
 main .txt {}
@@ -58,6 +60,12 @@ main .car #car {width:100%;}
 main .car #left_tire, main .car #right_tire {
     position:absolute; bottom:25px; width:67px;
 }
-main .car #left_tire {left:102px;}
-main .car #right_tire {right:91px;}
-
+main .car #left_tire {
+    animation: rotate 1s linear infinite;
+    left:102px;}
+main .car #right_tire {
+    animation: rotate 1s linear infinite;
+    right:91px;}
+main .scroll img {
+    animation:scroll 1s linear alternate infinite;
+}
